--- a/FlatIronApp/app/views/session/login.html.erb
+++ b/FlatIronApp/app/views/session/login.html.erb
@@ -1,7 +1,22 @@
-<h3> Login! </h3>
+<h3> Login </h3>
+
+<br>
+<% if flash[:message] %>
+  <%= flash[:message] %>
+<% end %>
+
+<% if flash[:errors] %>
+  <% flash[:errors].each do |error| %>
+    <li><%= error %></li>
+  <% end %>
+<% end %>
 
 <%= form_tag do  %>
+  <label>Username:</label>
   <%= text_field_tag :user_name %><br>
+    <label>Password:</label>
   <%= text_field_tag :password %><br>
   <%= submit_tag "Login" %>
 <% end %>
+<br>
+<%= link_to "Sign up!", new_user_path %>
