--- a/FlatIronApp/app/views/users/edit.html.erb
+++ b/FlatIronApp/app/views/users/edit.html.erb
@@ -1,9 +1,23 @@
+<br>
+<% if flash[:errors] %>
+  <% flash[:errors].each do |error| %>
+    <li><%= error %></li>
+  <% end %>
+<% end %>
+
+
 <%= form_for (@user) do |f| %>
+  <%= f.label :first_name%>
+  <%= f.text_field :first_name %><br>
+  <%= f.label :last_name%>
+  <%= f.text_field :last_name %><br>
   <%= f.label :mod%>
   <%= f.text_field :mod %><br>
   <%= f.label :likes%>
-  <%= f.text_field :likes %><br>
+  <%= f.text_area :likes %><br>
   <%= f.label :email%>
   <%= f.text_field :email %><br>
+  <%= f.label :user_name%>
+  <%= f.text_field :user_name %><br>
   <%= f.submit %><br>
 <% end %>
