--- a/FlatIronApp/app/views/users/new.html.erb
+++ b/FlatIronApp/app/views/users/new.html.erb
@@ -21,6 +21,6 @@
   <%= f.label :user_name%>
   <%= f.text_field :user_name %><br>
   <%= f.label :password%>
-  <%= f.text_field :password %><br>
+  <%= f.password_field :password %><br>
   <%= f.submit "Click Here to Sign Up" %><br>
 <% end %>
