--- a/FlatIronApp/app/views/users/profile.html.erb
+++ b/FlatIronApp/app/views/users/profile.html.erb
@@ -1,6 +1,6 @@
 <h3><%= @user.full_name %> Profile</h3>
 
 <h5> Mod: <%= @user.mod %> </h5>
-<p>Likes: <%= @user.likes %> </p>
+<p>Likes: <%= @user.hobbies %> </p>
 
 <%= link_to "View all profiles", users_path %>
