--- a/FlatIronApp/app/views/users/show.html.erb
+++ b/FlatIronApp/app/views/users/show.html.erb
@@ -18,3 +18,7 @@
 <% end %>
 <br>
 <%= link_to "User Profiles", users_path %>
+
+<%= form_tag user_path(@user.id), method: "delete" do %>
+  <%= submit_tag "Delete Profile" %>
+<% end %>
