--- a/FlatIronApp/app/views/layouts/application.html.erb
+++ b/FlatIronApp/app/views/layouts/application.html.erb
@@ -17,8 +17,10 @@
   </head>
   <body>
     <%= render 'shared/navbar' %>
-    
+
     <br>
+    <div class="container">
     <%= yield %>
+  </div>
   </body>
 </html>
