--- a/FlatIronApp/app/views/sent_requests/new.html.erb
+++ b/FlatIronApp/app/views/sent_requests/new.html.erb
@@ -5,10 +5,10 @@
 <% end %>
 
 <%= form_for (@sent_request) do |f| %>
-  <label> Send Request to:
+  <h2> Send Request to:</h2>
     <br>
-    <%= f.collection_select :user_id, @users, :id, :full_name %>
+    <h3><%= f.collection_select :user_id, @users, :id, :full_name %></h3>
     <br>
-  </label>
-  <%= f.submit %>
+
+  <h3><%= f.submit "Send 😊"%></h3>
 <% end %>
