--- a/FlatIronApp/app/views/shared/_navbar.erb
+++ b/FlatIronApp/app/views/shared/_navbar.erb
@@ -5,6 +5,7 @@
     <span class="navbar-toggler-icon"></span>
   </button>
 
+  <% unless current_user.nil? %>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
@@ -35,4 +36,5 @@
       </li>
     </ul>
   </div>
+  <% end %>
 </nav>
