--- a/FlatIronApp/app/views/users/edit.html.erb
+++ b/FlatIronApp/app/views/users/edit.html.erb
@@ -15,13 +15,7 @@
   <%= f.text_field :mod %><br>
   <%= f.label :hobbies%>
   <%= f.text_area :hobbies %><br>
-  <%= f.label :email%>
-  <%= f.text_field :email %><br>
   <%= f.label :user_name%>
-  <%= f.text_field :user_name %><br>
+  <%= f.text_field :user_name %><br><br>
   <%= f.submit %><br>
-<% end %>
-
-<%= form_tag user_path(@user.id), method: "delete" do %>
-  <%= submit_tag "Delete Profile" %>
 <% end %>
